// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FiltersPanel FilterListNonIdealState matches a snapshot if given an empty list of filter lists 1`] = `
<div
  className="bp4-non-ideal-state"
>
  <h4
    className="bp4-heading"
  >
    Filters
  </h4>
  <div>
    No filter lists found
  </div>
</div>
`;

exports[`FiltersPanel FilterListNonIdealState matches a snapshot if given an error 1`] = `
<div
  className="bp4-non-ideal-state"
>
  <h4
    className="bp4-heading"
  >
    Filters
  </h4>
  <div>
    Error loading filter list Error
  </div>
</div>
`;

exports[`FiltersPanel FilterListNonIdealState matches a snapshot if given everything it needs 1`] = `
<div>
  Here goes the filter list
</div>
`;

exports[`FiltersPanel FilterListNonIdealState matches a snapshot if not given filter lists 1`] = `
<div
  className="bp4-non-ideal-state"
>
  <h4
    className="bp4-heading"
  >
    Filters
  </h4>
  <div>
    No filter lists found
  </div>
</div>
`;

exports[`FiltersPanel matches a snapshot 1`] = `
Array [
  <section
    className="filter-list__container filter-list-picker__container"
  >
    <h6
      className="bp4-heading filter-list__header"
    >
      Filter List
    </h6>
    <div
      aria-controls="listbox-0"
      aria-expanded={false}
      aria-haspopup="listbox"
      className="bp4-popover2-target bp4-fill"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="combobox"
    >
      <button
        className="bp4-button bp4-fill bp4-large bp4-align-left"
        onBlur={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        tabIndex={-1}
        type="button"
      >
        <span
          className="bp4-button-text"
        >
          Select a filter list
        </span>
        <span
          aria-hidden={true}
          className="bp4-icon bp4-icon-double-caret-vertical"
          icon="double-caret-vertical"
        >
          <svg
            data-icon="double-caret-vertical"
            height={16}
            viewBox="0 0 16 16"
            width={16}
          >
            <path
              d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </button>
    </div>
  </section>,
  <div
    className="bp4-non-ideal-state"
  >
    <h4
      className="bp4-heading"
    >
      Filter List
    </h4>
    <div>
      No filter lists found
    </div>
  </div>,
]
`;
